--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,33 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group
+      android:scaleX="0.5"
+      android:scaleY="0.5"
+      android:translateX="128"
+      android:translateY="128">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#F7B239"
+        android:pathData="M92.48,73.77c-1.62,-3.95 -2.51,-8.27 -2.51,-12.8c0,-18.62 15.09,-33.72 33.72,-33.72c9.34,0 17.78,3.8 23.9,9.93c6.01,-17.49 22.59,-30.07 42.13,-30.07c13.24,0 25.14,5.78 33.29,14.97C227.79,9.19 240.17,0 254.69,0c15.36,0 28.31,10.28 32.39,24.32c8.15,-10.47 20.87,-17.22 35.17,-17.22c19.54,0 36.14,12.58 42.15,30.07c6.1,-6.13 14.55,-9.93 23.9,-9.93c18.62,0 33.72,15.1 33.72,33.72c0,4.53 -0.9,8.85 -2.52,12.8c22.76,1.99 40.61,21.09 40.61,44.37c0,11.59 -4.43,22.15 -11.69,30.07l-67.11,79.86l-105.1,29.64l-125.31,-33.68l-60.63,-20.21l-26.7,-55.61c-7.25,-7.92 -11.68,-18.49 -11.68,-30.07C51.89,94.86 69.73,75.76 92.48,73.77z" />
+    <path
+        android:fillColor="#F95428"
+        android:pathData="M448.42,148.21l-66.86,0l-251.14,0l-66.86,0l-0.43,0l45,363.79l51.58,0l192.54,0l51.59,0l45,-363.79z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M381.56,148.21L352.26,512H292.15l3.66,-120.99c19.85,-12.99 21.41,-106.02 3.6,-119.28l0.01,-0.01l3.73,-123.5H381.56z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M216.18,391.02L219.84,512h-60.12l-29.29,-363.79h78.42l3.73,123.49l0.01,0.01C194.78,284.97 196.34,378.03 216.18,391.02z" />
+    <path
+        android:fillColor="#E09B2D"
+        android:pathData="M189.49,73.77c-1.62,-3.95 -2.51,-8.27 -2.51,-12.8c0,-18.62 15.09,-33.72 33.72,-33.72c9.34,0 17.78,3.8 23.9,9.93c4.95,-14.41 17.09,-25.47 32.14,-28.93C270.84,3.12 263.14,0 254.69,0c-14.52,0 -26.91,9.19 -31.66,22.07c-8.15,-9.19 -20.05,-14.97 -33.29,-14.97c-19.54,0 -36.12,12.58 -42.13,30.07c-6.12,-6.13 -14.56,-9.93 -23.9,-9.93c-18.63,0 -33.72,15.1 -33.72,33.72c0,4.53 0.89,8.85 2.51,12.8c-22.76,1.99 -40.6,21.09 -40.6,44.37c0,11.59 4.43,22.15 11.68,30.07h66.86h30.15c-7.25,-7.92 -11.68,-18.49 -11.68,-30.07C148.89,94.86 166.73,75.76 189.49,73.77z" />
+    <path
+        android:fillColor="#E54728"
+        android:pathData="M130.43,148.21l29.29,363.79l-51.58,0l-45,-363.79l0.43,0z" />
+    <path
+        android:fillColor="#F7B239"
+        android:pathData="M299.41,271.72c17.81,13.26 29.35,34.47 29.35,58.38c0,25.49 -13.1,47.91 -32.94,60.9c-11.44,7.51 -25.13,11.86 -39.83,11.86c-14.69,0 -28.38,-4.35 -39.8,-11.84c-19.85,-12.99 -32.96,-35.42 -32.96,-60.92c0,-23.92 11.55,-45.14 29.36,-58.4c12.11,-9.03 27.14,-14.36 43.4,-14.36C272.25,257.35 287.29,262.7 299.41,271.72z" />
+  </group>
 </vector>
