--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <item name="spacing_4" type="dimen">16dp</item>
     <item name="spacing_5" type="dimen">20dp</item>
     <item name="spacing_6" type="dimen">24dp</item>
+    <item name="spacing_7" type="dimen">28dp</item>
+    <item name="spacing_8" type="dimen">32dp</item>
+    <item name="spacing_9" type="dimen">36dp</item>
+    <item name="spacing_10" type="dimen">40dp</item>
+    <item name="spacing_11" type="dimen">44dp</item>
 </resources>
