--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,6 +28,7 @@
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
         <item name="fontFamily">@font/inter</item>
+        <item name="homeAsUpIndicator">@drawable/ic_chevron_back</item>
     </style>
 
     <style name="Theme.Popcorn" parent="Base.Theme.Popcorn" />
